--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,12 @@
 <div class="article-meta">
 <h1><span class="title">{{ .Title }}</span></h1>
 {{ with .Params.author }}<h2 class="author">{{ . }}</h2>{{ end }}
-{{ if .Params.date }}<h2 class="date">{{ .Date.Format "2006/01/02" }}</h2>{{ end }}
+{{ if .Params.date }}
+<h2 class="date">
+  {{ .Date.Format "2006/01/02" }}
+  {{ if ne .Lastmod .Date }}➞{{ .Lastmod.Format "2006/01/02" }}{{ end }}
+</h2>
+{{ end }}
 </div>
 
 <main>
