--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -1,5 +1,7 @@
+{{ if .Params.math }}
 <script src="//yihui.name/js/math-code.js"></script>
 <script async src="//cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+{{ end }}
 
 <script async src="//yihui.name/js/center-img.js"></script>
 
