--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,12 @@
 {{ partial "header.html" . }}
 
-{{if not .IsHome }}
+{{ if not .IsHome }}
 <h1>{{ .Title }}</h1>
 {{ end }}
 
 {{ .Content }}
 
+{{ if .IsHome }}
 {{ range first 6 (where .Data.Pages "Section" "=" "post") }}
   <article>
     <!-- the title summary -->
@@ -22,6 +23,22 @@
     </div>
   </article>
 {{ end }}
+{{ else }}
+{{ range first 6 (where .Data.Pages "Section" "!=" "azury") }}
+  <article>
+    <h3>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
+    </h3>
+    <div style="font-size:97%">
+      {{ .Summary }}
+      {{ if .Truncated }}
+      <a href="{{ .RelPermalink }}">Read More…</a>
+      {{ end }}
+    </div>
+  </article>
+{{ end }}
+{{ end }}
 
 <ul>
   {{ if .IsHome }}
@@ -32,7 +49,7 @@
     </li>
     {{ end }}
   {{ else }}
-    {{ range .Data.Pages }}
+    {{ range (where .Data.Pages "Section" "!=" "azury") }}
     <li>
       <span class="date">{{ .Date.Format "2006/01/02" }}</span>
       <a href="{{ .URL }}">{{ .Title }}</a>
