--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,8 +14,8 @@
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
       <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
     </h3>
-    <div style="font-size:97%">
-      {{ .Summary }}
+    <div class="sum", style="font-size:97%; margin-left:2%">
+      <p>{{ .Summary }}</p>
       {{ if .Truncated }}
       <!-- a read more link if the summary is truncated... -->
       <a href="{{ .RelPermalink }}">Read More…</a>
@@ -30,8 +30,8 @@
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
       <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
     </h3>
-    <div style="font-size:97%">
-      {{ .Summary }}
+    <div class="sum", style="font-size:97%; margin-left:2%">
+      <p>{{ .Summary }}</p>
       {{ if .Truncated }}
       <a href="{{ .RelPermalink }}">Read More…</a>
       {{ end }}
