--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -13,10 +13,9 @@
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
       <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
     </h3>
-    <div style="font-size:97%">
-      {{ .Summary }}
+    <div class="sum", style="font-size:97%; margin-left:2%">
++      <p>{{ .Summary }}</p>
       {{ if .Truncated }}
-      <!-- a read more link if the summary is truncated... -->
       <a href="{{ .RelPermalink }}">Read More…</a>
       {{ end }}
     </div>
