--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -14,7 +14,7 @@
       <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
     </h3>
     <div class="sum", style="font-size:97%; margin-left:2%">
-+      <p>{{ .Summary }}</p>
+      <p>{{ .Summary }}</p>
       {{ if .Truncated }}
       <a href="{{ .RelPermalink }}">Read More…</a>
       {{ end }}
