--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,54 +6,7 @@
 
 {{ .Content }}
 
-{{ if .IsHome }}
-{{ range first 6 (where .Data.Pages "Section" "=" "post") }}
-  <article>
-    <h3>
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-      <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
-    </h3>
-    <div class="sum", style="font-size:97%; margin-left:2%">
-      <p>{{ .Summary }}</p>
-      {{ if .Truncated }}
-      <a href="{{ .RelPermalink }}">Read More…</a>
-      {{ end }}
-    </div>
-  </article>
-{{ end }}
-{{ else }}
-{{ range first 6 (where .Data.Pages "Section" "!=" "") }}
-  <article>
-    <h3>
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-      <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
-    </h3>
-    <div class="sum", style="font-size:97%; margin-left:2%">
-      <p>{{ .Summary }}</p>
-      {{ if .Truncated }}
-      <a href="{{ .RelPermalink }}">Read More…</a>
-      {{ end }}
-    </div>
-  </article>
-{{ end }}
-{{ end }}
-
-<ul>
-  {{ if .IsHome }}
-    {{ range (where .Data.Pages "Section" "=" "post") }}
-    <li>
-      <span class="date">{{ .Date.Format "2006/01/02" }}</span>
-      <a href="{{ .URL }}">{{ .Title }}</a>
-    </li>
-    {{ end }}
-  {{ else }}
-    {{ range (where .Data.Pages "Section" "!=" "") }}
-    <li>
-      <span class="date">{{ .Date.Format "2006/01/02" }}</span>
-      <a href="{{ .URL }}">{{ .Title }}</a>
-    </li>
-    {{ end }}
-  {{ end }}
-</ul>
+{{ partial "first_sum.html" . }}
+{{ partial "entry_list.html" . }}
 
 {{ partial "footer.html" . }}
