less indent for summary at home

--- a/layouts/partials/first_sum.html
+++ b/layouts/partials/first_sum.html
@@ -12,7 +12,7 @@
     <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     <span class="datesum"><br>- {{ .Date.Format "Jan 02" }}</span>
   </h3>
-  <div class="sum" style="font-size:97%; margin-left:2%">
+  <div class="sum" style="margin-left:0.5%">
 {{ with .Description }}
   {{ $.Scratch.Set "summary" (markdownify .) }}
 {{ else }}
